Lp ui fixes 26 nov (#50)
* Add heading above user's own liquidity list

* Add or remove liquidity table header

* make restore wallet button primary color

* Fix coin icon alignment beside title

* Rename Wallet < Tokens to Wallet < Wallets

* Standardize use of DeFiChain and DeFi app

* Sidebar design changes

* fix liquidity info title

* Remove uppercase button labels as they are handled by CSS

* Improve LiquidityCard component

* Improve Liquidity pools video thumbnails

* Improve restarting modal and spinner

* improve remove liquidity confirmation and utxo progress layout. remove wait to confirm.

* Fix text case and remove duplicate strings in translations

* fix DEX intro layout

* fix spelling of .error-dailog

* refactor button styles and update nav styles

* improve help page layout

* simplify help option secondary text to just domain, not full url

* refactor help option to derive domain from actual link

* Improve console UI and UX

* improve text for insufficient balance

It's "balance", and there's no concept of "account"

* Fix changes required on electron side

Co-authored-by: Ahmed Hilali <monstrobishi@gmail.com>
Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

--- a/webapp/src/components/swapDropdown/SwapDropdown.module.scss
+++ b/webapp/src/components/swapDropdown/SwapDropdown.module.scss
@@ -20,6 +20,8 @@
 .buttonDropdown {
   border: 0;
   font-weight: $font-weight-normal;
+  display: flex;
+  align-items: center;
 
   &:not(:disabled):hover {
     color: $dropdown-link-hover-color !important;
@@ -28,6 +30,11 @@
   &:focus {
     border: 0;
     box-shadow: none !important;
+  }
+
+  // Coin icon
+  > :first-child {
+    margin-right: 8px;
   }
 }
 
