--- a/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
+++ b/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
@@ -25,7 +25,7 @@
   }
 }
 
-.error-dailog {
+.error-dialog {
   color: $dfi-red !important;
 }
 
@@ -37,7 +37,7 @@
   width: 24px;
 }
 
-.loaderInline {
+.txProgressLoader {
   position: absolute;
   left: -30px;
 }
