Fix/issues liquidity (#70)
* Fix: Badge color and design

* Add default value for addresses dropdown

* Allow user select share address for add lp

* Allow user to select before selecting other side

--- a/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
+++ b/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
@@ -42,6 +42,14 @@
   left: -30px;
 }
 
+.txProgressSuccess {
+  position: absolute;
+  left: -30px;
+  color: $green;
+  height: 24px;
+  width: 24px;
+}
+
 .keyValueLiKey {
   font-weight: $font-weight-medium;
 }
@@ -49,4 +57,18 @@
 .keyValueLiValue {
   color: $secondary;
   text-align: right;
+}
+
+.divisibilityDropdown {
+  width: 100%;
+  text-align: left;
+  &:after {
+    float: right;
+    margin-top: 10px;
+  }
+}
+
+.scrollAuto {
+  overflow: auto;
+  height: 100px;
 }
