Lp ui fixes 1 dec (#72)
* add react-icons back to packages

* Fix buttons, form controls, menu active background and colors

* Fix wrong text, text case and back button case

* Fix DEX welcome page icons

* fix Add/Remove liquidity UTXO progress styles

* Improve token avatar

* Change ETH icon

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

--- a/webapp/src/components/TokenCard/TokenCard.module.scss
+++ b/webapp/src/components/TokenCard/TokenCard.module.scss
@@ -18,7 +18,6 @@
 
 .text {
   text-align: end;
-  line-height: 1.5rem;
 }
 
 .cardBody {
@@ -28,27 +27,38 @@
   align-items: flex-end;
 }
 
-.label {
+.tokenName {
   font-weight: $font-weight-medium;
+}
+
+.tokenSymbol {
+  color: $secondary;
+}
+
+.label {
   letter-spacing: 0.15px;
   width: 100%;
-  margin-bottom: 0.5rem;
 }
 
 .value {
-  font-weight: $font-weight-semibold;
   font-size: 2.125rem;
   line-height: 2.5rem;
 }
 
 .unit {
-  font-weight: $font-weight-medium;
   letter-spacing: 0.15px;
   color: $secondary;
 }
 
+.verifiedIcon {
+  margin-right: 8px;
+}
+
 .tokenCardIcon {
-  text-align: end;
+  align-self: flex-start;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .keyValueLi {
