--- a/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
+++ b/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
@@ -29,17 +29,26 @@
   color: $dfi-red !important;
 }
 
-.successColor {
-  color: #28a745;
+.txProgressLine {
+  position: relative;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
+  padding-left: 32px;
+}
+
+.txProgressSuccess {
   position: absolute;
-  left: -30px;
+  left: 0;
+  color: $green;
   height: 24px;
   width: 24px;
 }
 
 .txProgressLoader {
   position: absolute;
-  left: -30px;
+  left: 0;
 }
 
 .txProgressSuccess {
