--- a/webapp/src/scss/_layout.scss
+++ b/webapp/src/scss/_layout.scss
@@ -72,7 +72,7 @@ body {
         position: absolute;
         left: 12px;
         top: 12px;
-        text-transform: none;
+        text-transform: uppercase;
       }
 
       .update-available {
