--- a/webapp/src/scss/bootstrap/_buttons.scss
+++ b/webapp/src/scss/bootstrap/_buttons.scss
@@ -82,7 +82,7 @@
 
     &:not(:disabled):not(.disabled):hover,
     &:not(:disabled):not(.disabled):active {
-      color: $link-hover-color;
+      color: map-get($theme-colors, $color);
       background-color: $input-bg;
       border-color: $input-border-color;
     }
