--- a/webapp/src/scss/bootstrap/_variables.scss
+++ b/webapp/src/scss/bootstrap/_variables.scss
@@ -413,7 +413,8 @@ $btn-line-height-lg: $input-btn-line-height-lg;
 $btn-border-width: $input-btn-border-width;
 
 $btn-font-weight: $font-weight-medium;
-$btn-box-shadow: inset 0 1px 0 rgba($white, 0.15), 0 1px 1px rgba($black, 0.075);
+// $btn-box-shadow: inset 0 1px 0 rgba($white, 0.15), 0 1px 1px rgba($black, 0.075);
+$btn-box-shadow: none;
 $btn-focus-width: $input-btn-focus-width;
 $btn-focus-box-shadow: $input-btn-focus-box-shadow;
 $btn-disabled-opacity: 0.65;
