--- a/webapp/src/containers/WalletPage/components/WalletTxnsNew/WalletTxns.module.scss
+++ b/webapp/src/containers/WalletPage/components/WalletTxnsNew/WalletTxns.module.scss
@@ -44,7 +44,6 @@
 
 .copyIcon {
   text-align: left;
-  width: 500px;
 }
 
 .colorGreen {
@@ -90,5 +89,6 @@
   text-align: right;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   color: $secondary;
 }
