--- a/webapp/src/containers/WalletPage/components/WalletTxnsNew/WalletTxns.module.scss
+++ b/webapp/src/containers/WalletPage/components/WalletTxnsNew/WalletTxns.module.scss
@@ -86,9 +86,13 @@
   position: relative;
   overflow: hidden;
   overflow-wrap: break-word;
-  text-align: right;
+  text-align: left;
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  color: $secondary;
+}
+
+.txid__na {
   color: $secondary;
 }
