feat: updated colors for txid message

--- a/webapp/src/scss/bootstrap/_variables.scss
+++ b/webapp/src/scss/bootstrap/_variables.scss
@@ -74,6 +74,7 @@ $warning: $yellow;
 $danger: $red;
 $light: $gray-100;
 $dark: $gray-800;
+$disabled: $gray-400;
 
 $theme-colors: ();
 // stylelint-disable-next-line scss/dollar-variable-default
