feat: wallet page ui updates (#98)
* feat: wallet page ui updates

* feat: removed '-' when txid is empty

* feat: updated empty txid for rewards

* feat: updated colors for txid message

* feat: added german translation

Co-authored-by: Ahmed Hilali <monstrobishi@gmail.com>
Co-authored-by: saurabh391 <66796125+saurabh391@users.noreply.github.com>

--- a/webapp/src/containers/WalletPage/components/WalletTxnsNew/WalletTxns.module.scss
+++ b/webapp/src/containers/WalletPage/components/WalletTxnsNew/WalletTxns.module.scss
@@ -44,7 +44,6 @@
 
 .copyIcon {
   text-align: left;
-  width: 500px;
 }
 
 .colorGreen {
@@ -87,8 +86,13 @@
   position: relative;
   overflow: hidden;
   overflow-wrap: break-word;
-  text-align: right;
+  text-align: left;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   color: $secondary;
+}
+
+.txid__na {
+  color: $disabled;
 }
