fix: overlapping address in lp, added label in receive address (#117)
* fix: overlapping address in lp, added label in receive address

* fix: added overlap update on Create Token page

--- a/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
+++ b/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
@@ -4,6 +4,7 @@
 @import '~bootstrap/scss/mixins';
 @import '../../../../scss/variables';
 @import '../../../../scss/bootstrap/variables';
+@import '../../../../scss/utility';
 
 .addLiquidityRow {
   display: flex;
