feat: implemented consistent page titles

--- a/webapp/src/containers/WalletPage/components/ReceivePage/PaymentRequestList/PaymentRequestList.module.scss
+++ b/webapp/src/containers/WalletPage/components/ReceivePage/PaymentRequestList/PaymentRequestList.module.scss
@@ -4,6 +4,7 @@
 @import '~bootstrap/scss/mixins';
 @import '../../../../../scss/variables';
 @import '../../../../../scss/bootstrap/variables';
+@import '../../../../../scss/utility';
 
 .table {
   margin-bottom: 0;
@@ -29,4 +30,8 @@
 
 .colorRed {
   color: $red;
+}
+
+.addressContainer {
+  max-width: 175px;
 }
