--- a/webapp/src/scss/_layout.scss
+++ b/webapp/src/scss/_layout.scss
@@ -25,7 +25,7 @@ body {
       position: relative;
       height: 112px;
       border-bottom: $border-width solid $border-color;
-      padding: 24px 32px;
+      padding: 26px 32px 24px;
       display: flex;
       align-items: flex-end;
       justify-content: space-between;
