chore: update packages and translations

--- a/webapp/src/containers/SyncStatus/SyncStatus.module.scss
+++ b/webapp/src/containers/SyncStatus/SyncStatus.module.scss
@@ -9,7 +9,7 @@
   border-top: 1px solid $border-color;
   background-color: $white;
   min-height: 81px;
-  padding: 16px;
+  padding: 16px 32px;
   position: sticky;
   bottom: 0;
 
