feat: initial wallet changes

--- a/webapp/src/containers/Sidebar/Sidebar.module.scss
+++ b/webapp/src/containers/Sidebar/Sidebar.module.scss
@@ -140,3 +140,21 @@ div[disabled] {
     margin-right: 0 !important;
   }
 }
+
+.navBadgeIcon {
+  background-color: $light;
+  font-size: 1.5rem;
+  color: $secondary;
+  padding: 0.75rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.navBadgeText {
+  text-align: center;
+  color: $secondary;
+  font-weight: 500;
+  font-size: 0.95rem;
+}
