--- a/webapp/src/containers/PopOver/EncryptWalletModal/EncryptWalletModal.module.scss
+++ b/webapp/src/containers/PopOver/EncryptWalletModal/EncryptWalletModal.module.scss
@@ -16,13 +16,13 @@
 }
 
 .lockIcon {
-  width: 100px;
-  height: 100px;
-  background-color: rgba(0, 0, 0, 0.1);
+  width: 80px;
+  height: 80px;
+  background-color: $light;
   text-align: center;
-  line-height: 100px;
+  line-height: 80px;
   border-radius: 100%;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   padding: 20px;
-  color: #676868;
+  color: $secondary;
 }
