--- a/webapp/src/app/App.scss
+++ b/webapp/src/app/App.scss
@@ -46,7 +46,7 @@
 @import '~bootstrap/scss/alert';
 @import '~bootstrap/scss/progress';
 @import '~bootstrap/scss/media';
-// @import "~bootstrap/scss/list-group";
+@import '~bootstrap/scss/list-group';
 @import '~bootstrap/scss/close';
 // @import "~bootstrap/scss/toasts";
 @import '~bootstrap/scss/modal';
@@ -81,7 +81,7 @@
 // @import '../scss/bootstrap/badge';
 // @import '../scss/bootstrap/alert';
 @import '../scss/bootstrap/progress';
-// @import '../scss/bootstrap/list-group';
+@import '../scss/bootstrap/list-group';
 // @import '../scss/bootstrap/close';
 // @import '../scss/bootstrap/toasts';
 // @import '../scss/bootstrap/modal';
