--- a/webapp/src/containers/PopOver/popOver.module.scss
+++ b/webapp/src/containers/PopOver/popOver.module.scss
@@ -30,6 +30,18 @@
   }
 }
 
+.backupIcon {
+  width: 80px;
+  height: 80px;
+  background-color: $light;
+  text-align: center;
+  line-height: 80px;
+  border-radius: 100%;
+  margin-bottom: 15px;
+  padding: 18px;
+  color: $secondary;
+}
+
 @-webkit-keyframes rotation {
   from {
     -webkit-transform: rotate(0deg);
