feat: encrypt wallet  (#506)
* feat: initial encrypt wallet changes

* chore: new labels

* chore: added german translations

* chore: bump packages

* chore: bump packages

* chore: bump packages

* feat: initial work on locking of wallet

* feat: lock and unlock wallet

* build: test dev build

* chore: fixed typo

* chore: test style

* chore: revert styling

* chore: updated snapshots

* chore: removed branch build

* chore: bump packages

* feat: moved unlock state to wallet

* feat: styling changes

* feat: updates on flows

* chore: updated labels

* chore: backup on post encrypt

--- a/webapp/src/containers/Sidebar/Sidebar.module.scss
+++ b/webapp/src/containers/Sidebar/Sidebar.module.scss
@@ -19,17 +19,14 @@ div[disabled] {
   opacity: 0.7;
 }
 
-.iconPointer {
-  cursor: pointer;
-  color: $secondary;
-}
-
 .iconSideBar {
   min-height: 26px;
 }
 
 .iconNavTop {
-  &:hover {
+  color: $secondary;
+  cursor: pointer;
+  &:hover:not(.navBadgeLocked) {
     color: $black;
     transition: all 0.2ms linear;
   }
@@ -175,4 +172,8 @@ div[disabled] {
 
 .passphraseIcon {
   padding: 0.75rem 16px 0.25rem;
+}
+
+.navBadgeLocked {
+  color: $primary;
 }
