feat: settings change passphrase and auto lock timeout (#518)

--- a/webapp/src/scss/_layout.scss
+++ b/webapp/src/scss/_layout.scss
@@ -136,6 +136,10 @@ body {
         padding-left: 0;
         padding-right: 0;
       }
+
+      &.dark-bg {
+        background-color: $dfi-scent;
+      }
     }
 
     .footer-sheet {
