--- a/webapp/src/containers/Sidebar/Sidebar.module.scss
+++ b/webapp/src/containers/Sidebar/Sidebar.module.scss
@@ -174,6 +174,11 @@ div[disabled] {
   padding: 0.75rem 16px 0.25rem;
 }
 
+.iconPosition {
+  left: 12px;
+  position: relative;
+}
+
 .navBadgeLocked {
   color: $primary;
 }
