Fix: Change footer to white (#590)

--- a/webapp/src/scss/_layout.scss
+++ b/webapp/src/scss/_layout.scss
@@ -127,7 +127,7 @@ body {
       position: relative;
       z-index: $zindex-modal;
       padding: 16px 32px;
-      // background-color: $body-bg;
+      background-color: $body-bg;
       border-top: $border-width solid $border-color;
       border-bottom-left-radius: $border-radius * 1.5;
       width: 100%;
