fix: unlock wallet if masternode is present (#584)
* fix: fixes for MN page

* feat: restructured defi configuration

* feat: off configs on exit wallet

* feat: display lock screen for MNs

* feat: unlock for max timeout

* feat: lock wallet warning

* feat: last changes for MN

* style: codacy fix

--- a/webapp/src/scss/_layout.scss
+++ b/webapp/src/scss/_layout.scss
@@ -194,3 +194,20 @@ body {
     background-color: rgba(0, 0, 0, 0.2);
   }
 }
+
+.fullWidthDropdown {
+  width: 100%;
+
+  button {
+    width: 100%;
+    text-align: start;
+    display: block;
+  }
+
+  .dropdown-toggle::after {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-right: 1.5rem;
+  }
+}
