--- a/webapp/src/containers/WalletPage/components/WalletPassphrasePage/walletPassphrasePage.module.scss
+++ b/webapp/src/containers/WalletPage/components/WalletPassphrasePage/walletPassphrasePage.module.scss
@@ -24,3 +24,15 @@
 .error-dialog {
   color: $dfi-red !important;
 }
+
+.lockIcon {
+  width: 80px;
+  height: 80px;
+  background-color: $light;
+  text-align: center;
+  line-height: 80px;
+  border-radius: 100%;
+  margin-bottom: 20px;
+  padding: 20px;
+  color: $secondary;
+}
