--- a/webapp/src/scss/_layout.scss
+++ b/webapp/src/scss/_layout.scss
@@ -127,7 +127,7 @@ body {
       position: relative;
       z-index: $zindex-modal;
       padding: 16px 32px;
-      background-color: $body-bg;
+      background-color: $dfi-scent;
       border-top: $border-width solid $border-color;
       border-bottom-left-radius: $border-radius * 1.5;
       width: 100%;
@@ -165,7 +165,7 @@ body {
     top: 0;
     z-index: $zindex-modal-backdrop;
     width: 100%;
-    height: 100%;
+    height: 66.5vh;
     background-color: $modal-backdrop-bg;
     opacity: $modal-backdrop-opacity;
     display: none;
