fix: default path for wallet, bump app version to v2.3.2 (#642)
* fix: display of balance dropdown

* feat: added default file path for browsers

* chore: bump app version to v2.3.2

--- a/webapp/src/components/walletDropdown/WalletDropdown.module.scss
+++ b/webapp/src/components/walletDropdown/WalletDropdown.module.scss
@@ -32,6 +32,7 @@
   font-weight: $font-weight-normal;
   display: flex;
   align-items: center;
+  padding-bottom: 0;
 
   &:focus {
     border: 0;
