fix: ui updates (#672)
* fix: ui updates

* fix: link for github

* chore: label update

--- a/webapp/src/scss/_layout.scss
+++ b/webapp/src/scss/_layout.scss
@@ -165,7 +165,7 @@ body {
     top: 0;
     z-index: $zindex-modal-backdrop;
     width: 100%;
-    height: 66.5vh;
+    height: 100%;
     background-color: $modal-backdrop-bg;
     opacity: $modal-backdrop-opacity;
     display: none;
