Add css vertical align bottom (#697)

--- a/webapp/src/containers/ConsolePage/ConsoleComponent/console.scss
+++ b/webapp/src/containers/ConsolePage/ConsoleComponent/console.scss
@@ -45,6 +45,7 @@ span.react-console-cursor {
   content: '';
   width: 8px;
   height: 1.5rem;
+  vertical-align: bottom;
 }
 
 div.react-console-nofocus span.react-console-cursor {
