feat: add defichain analytics site to DEX (#792)
* feat: add analytics url

* feat: added defi analytics

* chore: german

* feat: defichain analytics

--- a/webapp/src/containers/SwapPage/swap.module.scss
+++ b/webapp/src/containers/SwapPage/swap.module.scss
@@ -72,3 +72,20 @@
 .width40 {
   width: 40%;
 }
+
+.analyticsContainer {
+  padding-left: 32px;
+  padding-bottom: 1rem;
+}
+
+.analyticsText {
+  font-size: 0.9rem;
+  color: $secondary;
+}
+
+.analyticsUrl {
+  cursor: pointer;
+  color: $primary;
+  margin-left: 0.25rem;
+  font-weight: 500;
+}
