feat: BTC SPV wallet (#779)
* feat: initial commit for balances

* feat: get spv balance

* feat: add balance poll for SPV

* chore: bump packages

* feat: add token list

* feat: tooltip

* feat: replace DEX icon

* feat: bg and DST badge

* feat: hash BTC SPV Symbol

* chore: bump packages

* feat: send and receive icons

* feat: balance info modal

* feat: receive addresses display

* chore: bump package

* fix: history

* feat: generate receive address

* feat: send BTC

* feat: add validation for receiving address

* chore: bump ts-loader

* feat: balance update

* feat: token list update

* chore: bump

* fix: ui updates

* fix: codacy

* chore: bump

* chore: bump packages

* chore: bump ain

* fix: hide cancel request for SPV

* fix: update popup text

* feat: spv send btc

* chore: bump packages

* fix: error message wrapping

* feat: update node version and snapshot update

* chore: bump packages

* feat: initial commit for display name

* feat: update snapshot to 819745

* chore: bump snapshot 822754

* chore: bump app to 2.3.4-rc.1

* feat: added chinese urls for telegram and url links

* feat: bump block

* feat: bump node to 1.6.4

* chore: bump packages

* chore: updated snapshot to 828899

* feat: retry and delay for send spv

--- a/webapp/src/containers/WalletPage/components/ReceivePage/PaymentRequestList/PaymentRequestList.module.scss
+++ b/webapp/src/containers/WalletPage/components/ReceivePage/PaymentRequestList/PaymentRequestList.module.scss
@@ -1,10 +1,4 @@
-// App and Bootstrap variables required
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
-@import '~bootstrap/scss/mixins';
-@import '../../../../../scss/variables';
-@import '../../../../../scss/bootstrap/variables';
-@import '../../../../../scss/utility';
+@import '../../../../../scss/bootstrap/common';
 
 .table {
   margin-bottom: 0;
@@ -30,4 +24,21 @@
 
 .addressContainer {
   max-width: 175px;
+  position: relative;
+}
+
+.copiedIndicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $dfi-scent;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.visibilityNone {
+  visibility: hidden;
 }
