--- a/webapp/src/scss/bootstrap/_variables.scss
+++ b/webapp/src/scss/bootstrap/_variables.scss
@@ -88,6 +88,7 @@ $theme-colors: map-merge(
     'danger': $danger,
     'light': $light,
     'dark': $dark,
+    'disabled': $disabled
   ),
   $theme-colors
 );
