feat: display UTXO and Token DFI (#850)
* feat: balances split

* feat: add balances and translations

--- a/webapp/src/containers/WalletPage/components/Balances/Balances.module.scss
+++ b/webapp/src/containers/WalletPage/components/Balances/Balances.module.scss
@@ -8,6 +8,11 @@
   color: $secondary;
 }
 
+.utxos {
+  color: $secondary;
+  font-weight: 600;
+}
+
 .bgImage {
   display: flex;
   position: absolute;
