--- a/webapp/src/containers/HelpPage/HelpPage.module.scss
+++ b/webapp/src/containers/HelpPage/HelpPage.module.scss
@@ -33,6 +33,12 @@
   }
 }
 
+.wechatIcon {
+  width: 150px;
+  height: 150px;
+  margin-right: 0;
+}
+
 .helpOptionDescription {
   h3 {
     font-weight: $font-weight-normal;
